# invenio-factory-patch

./: .gitignore  MANIFEST.in  README.md  factory.py  pyproject.toml
docs/source/: conf.py  index.rst
src/: factory.py
src/invenio_factory_patch/: __init__.py  celery.py  celery_api.py  celery_ui.py  cli.py  factory.py  invenio_factory_patch_api.cfg  invenio_factory_patch_ui.cfg  load_entry_points.py  loader.py  utils.py  wsgi.py  wsgi_api.py  wsgi_ui.py
src/tests/: conftest.py  test_factory.py  test_utils.py
tests/: conftest.py  test_load_entry_points.py
