[project]
name = "invenio-factory-patch"
version = "1.0.0"
dependencies = ["invenio-base>=1.2.0",
                "invenio-app>=1.3.0"]
		
description = """
	    invenio-ldapclient has to be loaded after invenio-accounts, though loading extension
	    modules via entry-points does not offer a way to enforce order of loading.

	    This module also contains uwsgi entry points pointing to these factories.
	    """
requires-python = ">=3.8,<3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "coverage", "sphinx", "sphinx-rtd-theme",
       "pip-tools", "ruff", "pylint", "mypy"]

[project.scripts]
ae-datastore = "invenio_factory_patch.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.mypy]
ignore_missing_imports = true
